<resources>
    <string name="app_name">ScheduleBreaks</string>
    <string name="action_settings">Settings</string>
    <string name="userName">Username</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="not_registered">Not Registered?</string>
    <string name="register">REGISTER</string>
    <string name="cnf_password">confirm password</string>
    <string name="already_registered">Already Registered</string>
</resources>
